ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  type: NodePort
  selector:
    app: ui
  ports:
  - port: 8080
    nodePort: 30002
