ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
spec:
  rules:
    - host: sample-project.local.app.garden
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8080

          - path: /call-backend
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8080
